# telco-customer-churn-predictor

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-fp-initial.ipynb  0.02-fp-distributions.ipynb
telco_customer_churn/: __init__.py  plots.py
telco_customer_churn/data/: clean.py  features.py
telco_customer_churn/modeling/: predict.py  train.py
